force-app/main/default/objects/WSO2ClientCredentialsLogin2__c/WSO2ClientCredentialsLogin2__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>WSO2ClientCredentialsLogin2</label>
</CustomObject>