force-app/main/default/objects/WSO2ClientCredentialsLogin2__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>