force-app/main/default/objects/WSO2ClientCredentialsLogin2__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>