force-app/main/default/objects/WSO2ClientCredentialsLogin2__c/fields/Token_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>